--- a/styles/index.css
+++ b/styles/index.css
@@ -1,16 +1,16 @@
-/*
-* {
-	border: .3px solid red;
+
+/** {
+	border: 1px solid red;
 }*/
 
 html, body {
 	left: 0;
-	background:linear-gradient(to top, rgba(255,255,255,1) 0%, rgba(110,109,153,0.2) 100%);;;
+	background:linear-gradient(to top, rgba(255,255,255,1) 0%,rgba(110,109,153,0.1) 50%, rgba(110,109,153,0.2) 100%);
 	top: 0;
 	/*border: 1px solid red;*/
 	width: 100%;
-	min-height: 150%;
-	height: auto;
+	height:100%;
+
 	padding: 0px;
 	margin: 0px;
 	display: flex;
@@ -19,32 +19,39 @@ html, body {
 
 .page {
 	padding:0 10px 0 0;
-	width:90%;
-	height: 100%;
+	width:100%;
+	
+	display:flex;
+	justify-content: center;
+	/*align-items: center;*/
 }
 
 
 .links {
-	display: flex;  
-	justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	width:100%;  
+	/*height: %*/
+	/*justify-content: space-between;*/
 	align-items: center;
-	height: 100px;
+	/*height: 100px;*/
 }
 
-.link {
+.link  {
+	margin-top: 20px;
+	cursor: pointer;
 	text-decoration: none;
-	cursor: pointer; 
-	flex-grow: 1;
-	min-width: 150px;
-	transition-duration: 0.5s;
+	width:80%;
+	height:10%;
 	padding: 10px;
-	/*margin:3px;*/
-	box-shadow: 0px 10px 20px -20px black;
+	transition: 1s;
+	box-shadow: 0px 10px 20px -25px black;
 }
 
 .link:hover {
-	background:  linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0) 70%, rgba(255,255,255,0) 100%);
-	box-shadow: 0px 14px 20px -18.5px black;
+	background:  linear-gradient(to top, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 70%, rgba(255,255,255,0) 100%);
+	box-shadow: 0px 14px 20px -21px black;
+	
 
 }
 
@@ -54,19 +61,20 @@ html, body {
 }
 .link p {
 
-	color: rgba(170, 170, 243,1);
+	height: 50%;
 	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
+	color: rgba(80, 80, 141,1);
+
 	text-align: center;
-	font-size: 1.2em;
+	font-size: 1.8em;
 	font-family: "Courier", cursive;
+
 }
 
 p {
-	color: green;
+	text-align: middle;
 	font-size: 2em;
+	margin-bottom: 2px;
 	font-family: "Courier", cursive;
 }
 
